--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/Common.php"
+            "app/Helpers/Common.php",
+            "app/Constants/index.php"
         ]
     },
     "autoload-dev": {
